Use enum field for HotThreads report type (#77812)
Backport of #77462.

HotThreads report request type was declared as String, but used as an
enum where only few values were allowed. This PR changes the type to
enum allowing malformed requests to correctly report the error.

This PR also introduces a small refactor to make the report getter
function part of the accumulator class.