@@ -15,7 +15,6 @@ import org.mockito.Matchers;
 import java.lang.management.ThreadInfo;
 import java.lang.management.ThreadMXBean;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.stream.Collectors;
@@ -30,12 +29,12 @@ public class HotThreadsTests extends ESTestCase {
 
     public void testSupportedThreadsReportType() {
         for (String type: new String[] {"unsupported", "", null, "CPU", "WAIT", "BLOCK" }) {
-            expectThrows(IllegalArgumentException.class, () -> new HotThreads().type(type));
+            expectThrows(IllegalArgumentException.class, () -> new HotThreads().type(HotThreads.ReportType.of(type)));
         }
 
         for (String type : new String[] { "cpu", "wait", "block" }) {
             try {
-                new HotThreads().type(type);
+                new HotThreads().type(HotThreads.ReportType.of(type));
             } catch (IllegalArgumentException e) {
                 fail(String.format(Locale.ROOT, "IllegalArgumentException called when creating HotThreads for supported type [%s]", type));
             }
@@ -69,7 +68,7 @@ public class HotThreadsTests extends ESTestCase {
         }
 
         List<StackTraceElement> testJvmStack = makeThreadStackHelper(
-            Arrays.asList(
+            org.elasticsearch.core.List.of(
                 new String[]{"org.elasticsearch.monitor.test", "methodOne"},
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"},
                 new String[]{"org.elasticsearch.monitor.test", "methodThree"},
@@ -83,7 +82,7 @@ public class HotThreadsTests extends ESTestCase {
         assertFalse(HotThreads.isIdleThread(notIdleThread));
 
         List<StackTraceElement> idleThreadStackElements = makeThreadStackHelper(
-            Arrays.asList(
+            org.elasticsearch.core.List.of(
                 new String[]{"java.util.concurrent.ThreadPoolExecutor", "getTask"},
                 new String[]{"sun.nio.ch.SelectorImpl", "select"},
                 new String[]{"org.elasticsearch.threadpool.ThreadPool$CachedTimeThread", "run"},
@@ -115,25 +114,25 @@ public class HotThreadsTests extends ESTestCase {
 
     public void testSimilarity() {
         StackTraceElement[] stackOne = makeThreadStackHelper(
-            Arrays.asList(
+            org.elasticsearch.core.List.of(
                 new String[]{"org.elasticsearch.monitor.test", "methodOne"},
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"}
             )).toArray(new StackTraceElement[0]);
 
         StackTraceElement[] stackTwo = makeThreadStackHelper(
-            Arrays.asList(
+            org.elasticsearch.core.List.of(
                 new String[]{"org.elasticsearch.monitor.test1", "methodOne"},
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"}
             )).toArray(new StackTraceElement[0]);
 
         StackTraceElement[] stackThree = makeThreadStackHelper(
-            Arrays.asList(
+            org.elasticsearch.core.List.of(
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"},
                 new String[]{"org.elasticsearch.monitor.test", "methodOne"}
             )).toArray(new StackTraceElement[0]);
 
         StackTraceElement[] stackFour = makeThreadStackHelper(
-            Arrays.asList(
+            org.elasticsearch.core.List.of(
                 new String[]{"org.elasticsearch.monitor.testPrior", "methodOther"},
                 new String[]{"org.elasticsearch.monitor.test", "methodOne"},
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"}
@@ -205,7 +204,7 @@ public class HotThreadsTests extends ESTestCase {
             when(mockedThreadInfo.getThreadId()).thenReturn(threadId);
 
             StackTraceElement[] stack = makeThreadStackHelper(
-                Arrays.asList(
+                org.elasticsearch.core.List.of(
                     new String[]{"org.elasticsearch.monitor.test", String.format(Locale.ROOT, "method_%d", (threadId) % 2)},
                     new String[]{"org.elasticsearch.monitor.testOther", "methodFinal"}
                 )).toArray(new StackTraceElement[0]);
@@ -226,12 +225,13 @@ public class HotThreadsTests extends ESTestCase {
         when(mockedMXBean.getAllThreadIds()).thenReturn(threadIds);
 
         List<ThreadInfo> allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
-        List<ThreadInfo> cpuOrderedInfos = Arrays.asList(allInfos.get(3), allInfos.get(2), allInfos.get(1), allInfos.get(0));
+        List<ThreadInfo> cpuOrderedInfos = org.elasticsearch.core.List.of(
+            allInfos.get(3), allInfos.get(2), allInfos.get(1), allInfos.get(0));
         when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(cpuOrderedInfos.toArray(new ThreadInfo[0]));
 
         HotThreads hotThreads = new HotThreads()
             .busiestThreads(4)
-            .type("cpu")
+            .type(HotThreads.ReportType.CPU)
             .interval(TimeValue.timeValueNanos(10))
             .threadElementsSnapshotCount(11)
             .ignoreIdleThreads(false);
@@ -259,13 +259,14 @@ public class HotThreadsTests extends ESTestCase {
 
         HotThreads hotWaitingThreads = new HotThreads()
             .busiestThreads(4)
-            .type("wait")
+            .type(HotThreads.ReportType.WAIT)
             .interval(TimeValue.timeValueNanos(10))
             .threadElementsSnapshotCount(11)
             .ignoreIdleThreads(false);
 
         allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
-        List<ThreadInfo> waitOrderedInfos = Arrays.asList(allInfos.get(3), allInfos.get(1), allInfos.get(0), allInfos.get(2));
+        List<ThreadInfo> waitOrderedInfos = org.elasticsearch.core.List.of(
+            allInfos.get(3), allInfos.get(1), allInfos.get(0), allInfos.get(2));
         when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(waitOrderedInfos.toArray(new ThreadInfo[0]));
 
         String waitInnerResult = hotWaitingThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
@@ -277,13 +278,14 @@ public class HotThreadsTests extends ESTestCase {
 
         HotThreads hotBlockedThreads = new HotThreads()
             .busiestThreads(4)
-            .type("block")
+            .type(HotThreads.ReportType.BLOCK)
             .interval(TimeValue.timeValueNanos(10))
             .threadElementsSnapshotCount(11)
             .ignoreIdleThreads(false);
 
         allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
-        List<ThreadInfo> blockOrderedInfos = Arrays.asList(allInfos.get(2), allInfos.get(0), allInfos.get(1), allInfos.get(3));
+        List<ThreadInfo> blockOrderedInfos = org.elasticsearch.core.List.of(
+            allInfos.get(2), allInfos.get(0), allInfos.get(1), allInfos.get(3));
         when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(blockOrderedInfos.toArray(new ThreadInfo[0]));
 
         String blockInnerResult = hotBlockedThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
@@ -308,7 +310,7 @@ public class HotThreadsTests extends ESTestCase {
 
         HotThreads hotThreads = new HotThreads()
             .busiestThreads(4)
-            .type("cpu")
+            .type(HotThreads.ReportType.CPU)
             .interval(TimeValue.timeValueNanos(10))
             .threadElementsSnapshotCount(11)
             .ignoreIdleThreads(false);
@@ -316,5 +318,23 @@ public class HotThreadsTests extends ESTestCase {
         String innerResult = hotThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
 
         assertEquals(1, innerResult.split("\r\n|\r|\n").length);
+    }
+
+    public void testReportTypeValueGetter() {
+        ThreadInfo mockedThreadInfo = mock(ThreadInfo.class);
+
+        when(mockedThreadInfo.getBlockedTime()).thenReturn(2L).thenReturn(0L);
+        when(mockedThreadInfo.getWaitedTime()).thenReturn(3L).thenReturn(0L);
+
+        HotThreads.ThreadTimeAccumulator info = new HotThreads.ThreadTimeAccumulator(mockedThreadInfo, 1L);
+
+        assertEquals(1L, HotThreads.ThreadTimeAccumulator.valueGetterForReportType(HotThreads.ReportType.CPU).applyAsLong(info));
+        assertEquals(3L, HotThreads.ThreadTimeAccumulator.valueGetterForReportType(HotThreads.ReportType.WAIT).applyAsLong(info));
+        assertEquals(2L, HotThreads.ThreadTimeAccumulator.valueGetterForReportType(HotThreads.ReportType.BLOCK).applyAsLong(info));
+
+        //Ensure all enum types have a report type getter
+        for (HotThreads.ReportType type : HotThreads.ReportType.values()) {
+            assertNotNull(HotThreads.ThreadTimeAccumulator.valueGetterForReportType(type));
+        }
     }
 }
